# django_docker_starter

./: .editorconfig  .env.prod.proxy-companion-sample  .env.sample  .flake8  .gitignore  .pre-commit-config.yaml  .tool-versions  Dockerfile  README.md  docker-compose-prod.yml  docker-compose.deploy.yml  docker-compose.yml  main.tf  requirements.txt  terraform.tfvars.sample  variables.tf
app/: requirements.txt
app/core/: settings.py  urls.py
apps/website/: urls.py
core/: settings.py  urls.py
django-app/: .djlint  .dockerignore  .env.sample  Dockerfile  Dockerfile.prod  entrypoint.sh  package-lock.json  package.json  pyproject.toml  supervisord.conf  tailwind.config.js
django-app/apps/accounts/: admin.py  forms.py  models.py  urls.py  views.py
django-app/apps/accounts/fixtures/: seed_accounts.json
django-app/apps/accounts/migrations/: 0001_initial.py
django-app/apps/accounts/templates/accounts/: profile.html
django-app/apps/accounts/templates/accounts/authentication/: authentication_base.html  login.html  register.html  token.html
django-app/apps/common/: widgets.py
django-app/apps/common/templates/widgets/: custom_checkbox.html
django-app/apps/common/templatetags/: markdown_filters.py
django-app/apps/website/: urls.py  views.py
django-app/apps/website/templates/: website_base.html
django-app/apps/website/templates/shared/: header.html
django-app/apps/website/templates/website/: about.html  homepage.html
django-app/core/: settings.py  urls.py
django-app/static/css/: input.css  markdown.css  output.css
django-app/static/js/: main.js
(+52 files in other folders)
