[project]
name = "django-app"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "django>=5.1.3",
    "psycopg-binary>=3.2.3",
    "psycopg>=3.2.3",
    "werkzeug>=3.1.3",
    "django-extensions>=3.2.3",
    "django-htmx>=1.21.0",
    "django-oauth-toolkit>=3.0.1",
    "djangorestframework>=3.15.2",
    "gunicorn>=23.0.0",
    "whitenoise>=6.8.2",
    "pytz>=2024.2",
    "markdown>=3.7",
    "pygments>=2.18.0",
    "django-environ>=0.11.2",
    "heroicons>=2.10.0",
    "django-debug-toolbar>=5.0.1",
]

[tool.setuptools.packages]
find = { include = ["apps*", "core*"] }

[dependency-groups]
dev = [
    "black>=24.10.0",
    "django-browser-reload>=1.17.0",
    "djlint>=1.36.4",
    "flake8>=7.1.1",
    "isort>=5.13.2",
    "pre-commit>=4.0.1",
]

# https://black.readthedocs.io/en/stable/usage_and_configuration/
[tool.black]
line-length = 88
target-version = ["py313"]
include = '\.pyi?$'

[tool.isort]
profile = "django"
combine_as_imports = true
include_trailing_comma = true
line_length = 88
multi_line_output = 3
known_first_party = ["config"]

[tool.djlint]
profile = "django"
ignore = "H006,H023"
indent = 2
